--- a/ionic.config.json
+++ b/ionic.config.json
@@ -4,5 +4,11 @@
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
-  }
+  },
+  "proxies": [
+    {
+      "path": "/api",
+      "proxyUrl": "http://localhost:2300/api"
+    }
+  ]
 }
